# ADO_to_GitHub_Migration

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  migration.yaml  pyproject.toml  requirements.txt
.github/workflows/: migrate-repo.yml
ado2gh/: __init__.py  __main__.py  cli.py  http_utils.py  logging_config.py  models.py
ado2gh/clients/: __init__.py  ado_client.py  gh_client.py  token_manager.py
ado2gh/core/: __init__.py  ado_cleanup.py  config_loader.py  discovery.py  migration_engine.py  rollback.py  wave_runner.py
ado2gh/phase/: __init__.py  batch_executor.py  gate_checker.py  progress_tracker.py  risk_scorer.py  wave_assigner.py
ado2gh/pipelines/: __init__.py  ado_yaml_compiler.py  detectors.py  extractor.py  inventory.py  resource_fetcher.py  template_resolver.py  transformer.py
ado2gh/reporting/: __init__.py  csv_exporter.py  pipeline_readiness.py  post_migration_validator.py  reporter.py  service_connection_manifest.py
ado2gh/state/: __init__.py  db.py
ado2gh/tools/: __init__.py  git_publisher.py  pipeline_migration.py
docs/: ARCHITECTURE.md  COMMAND_REFERENCE.md  EXECUTION_MANUAL.md  MIGRATION_RUNBOOK.md  PIPELINE_TRANSFORMATION_GUIDE.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
in/: sample_repos.txt  sample_repos_with_scopes.csv
